--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,45 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <title>Paint Shop Billing</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Products</title>
+  <!-- Load all CSS (Bootstrap + DataTables + custom) -->
+  <link rel="stylesheet" href="css/links.css">
 </head>
-
 <body>
-    <h1>Paint Shop Billing</h1>
 
-    <form id="billForm">
-        <label>Customer Name:</label>
-        <input type="text" id="customerName" required><br><br>
+  <div class="container my-4">
+    <h1 class="text-center text-primary">Pakaya</h1>
+    <button class="btn btn-success">If green, Bootstrap works ✅</button>
+    <button class="btn btn-danger">If red, Bootstrap works ✅</button>
+  </div>
 
-        <label>Item:</label>
-        <input type="text" id="item" required>
-        <label>Price:</label>
-        <input type="number" id="price" required>
-        <label>Qty:</label>
-        <input type="number" id="qty" value="1" required>
-        <button type="button" onclick="addItem()">Add</button>
-    </form>
-
-    <h2>Bill Items</h2>
-    <table id="billTable" border="1">
-        <thead>
-            <tr>
-                <th>Item</th>
-                <th>Price</th>
-                <th>Qty</th>
-                <th>Total</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-    <h3>Total: <span id="grandTotal">0</span></h3>
-    <button onclick="saveAndPrintBill()">Save & Print Bill</button>
-
-    <script src="script.js"></script>
+  <!-- Common imports -->
+  <script src="js/links.js"></script>
 </body>
-
 </html>
