--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Products</title>
-  <!-- Load all CSS (Bootstrap + DataTables + custom) -->
-  <link rel="stylesheet" href="css/links.css">
+  <title>Dashboard</title>
+  <link rel="stylesheet" href="css/common.css">
 </head>
-<body>
+<body class="d-flex">
 
-  <div class="container my-4">
-    <h1 class="text-center text-primary">Pakaya</h1>
-    <button class="btn btn-success">If green, Bootstrap works ✅</button>
-    <button class="btn btn-danger">If red, Bootstrap works ✅</button>
+  <!-- Sidebar placeholder -->
+  <div id="sidebar-container"></div>
+
+  <!-- Main content -->
+  <div class="flex-grow-1 p-4">
+    <h1>Welcome</h1>
+    <p>This is the main content area.</p>
   </div>
 
-  <!-- Common imports -->
-  <script src="js/links.js"></script>
+  <script src="js/common.js"></script>
+  <script>
+   
+  </script>
 </body>
 </html>
